--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -69,8 +69,6 @@ jobs:
     needs: setup-matrix
     if: needs.setup-matrix.outputs.should_run == 'true'
     runs-on: ubuntu-latest
-    outputs:
-      venv-key: ${{ steps.venv-key.outputs.value }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -96,21 +94,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-deps-
 
-      - name: Compute virtualenv cache key
-        id: venv-key
-        env:
-          RUNNER_OS: ${{ runner.os }}
-          HASH: >-
-            ${{ hashFiles('requirements.txt', 'pyproject.toml', 'uv.lock', '.github/workflows/benchmark.yml') }}
-        run: |
-          echo "value=${RUNNER_OS}-benchmark-venv-${HASH}" >> $GITHUB_OUTPUT
-
       - name: Restore prepared virtualenv
         id: venv-cache
         uses: actions/cache@v4
         with:
           path: .venv
-          key: ${{ steps.venv-key.outputs.value }}
+          key: >-
+            ${{ format(
+              '{0}-benchmark-venv-{1}',
+              runner.os,
+              hashFiles(
+                'requirements.txt',
+                'pyproject.toml',
+                'uv.lock',
+                '.github/workflows/benchmark.yml'
+              )
+            ) }}
 
       - name: Build virtualenv
         if: steps.venv-cache.outputs.cache-hit != 'true'
@@ -135,7 +134,17 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: .venv
-          key: ${{ steps.venv-key.outputs.value }}
+          key: >-
+            ${{ format(
+              '{0}-benchmark-venv-{1}',
+              runner.os,
+              hashFiles(
+                'requirements.txt',
+                'pyproject.toml',
+                'uv.lock',
+                '.github/workflows/benchmark.yml'
+              )
+            ) }}
 
   # Parallel benchmark execution
   benchmark:
@@ -152,11 +161,20 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Restore prepared virtualenv
-        id: extract-env
         uses: actions/cache/restore@v4
         with:
           path: .venv
-          key: ${{ needs.prepare-runtime.outputs.venv-key }}
+          key: >-
+            ${{ format(
+              '{0}-benchmark-venv-{1}',
+              runner.os,
+              hashFiles(
+                'requirements.txt',
+                'pyproject.toml',
+                'uv.lock',
+                '.github/workflows/benchmark.yml'
+              )
+            ) }}
 
       - name: Ensure venv availability
         run: |
@@ -246,7 +264,17 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: .venv
-          key: ${{ needs.prepare-runtime.outputs.venv-key }}
+          key: >-
+            ${{ format(
+              '{0}-benchmark-venv-{1}',
+              runner.os,
+              hashFiles(
+                'requirements.txt',
+                'pyproject.toml',
+                'uv.lock',
+                '.github/workflows/benchmark.yml'
+              )
+            ) }}
 
       - name: Ensure virtualenv on PATH
         run: |
